--- a/wp-content/themes/mm/todo.txt
+++ b/wp-content/themes/mm/todo.txt
@@ -16,6 +16,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#232323', end
 ★ Discourage search engine
 ★ Debug Enabled
 ★ Use css prefixer
+★ Wordpress security plugins
+★ compress images
+★ OWL caraousel 3,4,5,6 left right javascript minify with (this)
 
 
 ★ Change sass color var to root var
