--- a/wp-content/themes/mm/todo.txt
+++ b/wp-content/themes/mm/todo.txt
@@ -1,5 +1,7 @@
 ﻿
-#060608c2
+          <?php while( have_rows('clients') ): the_row(); ?>
+              <div class="item owl1-item" style=" background: url('<?php the_sub_field('image'); ?>') center center no-repeat; background-size:contain;"> </div>
+          <?php endwhile; ?>
 
 TO BE DONE *****
 
