--- a/wp-content/themes/mm/todo.txt
+++ b/wp-content/themes/mm/todo.txt
@@ -29,6 +29,7 @@ TO BE DONE *****
 ★ Landing Page correct anchor links
 ★ Remove other land.svg image from images folder
 ★ Ask her to take ownership of himalayan host account
+★ Contact us mail not sending emails
 
 
 
