--- a/wp-content/themes/mm/todo.txt
+++ b/wp-content/themes/mm/todo.txt
@@ -1,7 +1,23 @@
-﻿
-          <?php while( have_rows('clients') ): the_row(); ?>
-              <div class="item owl1-item" style=" background: url('<?php the_sub_field('image'); ?>') center center no-repeat; background-size:contain;"> </div>
-          <?php endwhile; ?>
+﻿  <div class="row mx-0 who-we-are">
+
+    <div class="col-12 mx-auto">
+      <h1 class="">Who we are</h1>
+      <p><?php the_field('whoweare'); ?></p>
+    </div>
+
+    <div class="col-12 mx-auto wrap-product">
+        <div class="row mx-0">
+          <div class="col-3_5 dark-product mr-auto">Caps and Closures</div>
+          <div class="col-3_5 dark-product mx-auto">HDPE jars and jerrycanes</div>
+          <div class="col-3_5 dark-product ml-auto">HDPE pipes and PVC Profiles</div>
+        </div>    
+        <div class="row mx-0 mt-5">
+          <div class="col-3_5 dark-product ml-auto mr-4">Pet Bottles & Jars</div>
+          <div class="col-3_5 dark-product mr-auto ml-4">Pet Bottles & Jars</div>
+        </div>    
+    </div>
+
+  </div>
 
 TO BE DONE *****
 
